; ModuleID = '/home/carl/AnghaBench/linux/net/bridge/extr_br_vlan.c_br_vlan_link_state_change_fn.c'
source_filename = "/home/carl/AnghaBench/linux/net/bridge/extr_br_vlan.c_br_vlan_link_state_change_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.br_vlan_link_state_walk_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, i8*)* @br_vlan_link_state_change_fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @br_vlan_link_state_change_fn(%struct.net_device* %0, i8* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.br_vlan_link_state_walk_data*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.br_vlan_link_state_walk_data*
  store %struct.br_vlan_link_state_walk_data* %7, %struct.br_vlan_link_state_walk_data** %5, align 8
  %8 = load %struct.net_device*, %struct.net_device** %3, align 8
  %9 = call i64 @br_vlan_is_bind_vlan_dev(%struct.net_device* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %2
  %12 = load %struct.br_vlan_link_state_walk_data*, %struct.br_vlan_link_state_walk_data** %5, align 8
  %13 = getelementptr inbounds %struct.br_vlan_link_state_walk_data, %struct.br_vlan_link_state_walk_data* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.net_device*, %struct.net_device** %3, align 8
  %16 = call i32 @br_vlan_set_vlan_dev_state(i32 %14, %struct.net_device* %15)
  br label %17

17:                                               ; preds = %11, %2
  ret i32 0
}

declare dso_local i64 @br_vlan_is_bind_vlan_dev(%struct.net_device*) #1

declare dso_local i32 @br_vlan_set_vlan_dev_state(i32, %struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
